--- a/src/assets/style.less
+++ b/src/assets/style.less
@@ -1,11 +1,13 @@
 @import "./config.less";
 
 .header{
-
+  height: @header-footer-height;
+  background: @header-footer-bg;
 }
 
 .footer{
-
+  height: @header-footer-height;
+  background: @header-footer-bg;
 }
 
 .main-content{
