--- a/src/assets/style.less
+++ b/src/assets/style.less
@@ -11,5 +11,12 @@
 }
 
 .main-content{
-
+   .home-component{
+     height: 100%;
+     .container{
+       border-left: 1px solid @header-footer-bg;
+       border-right: 1px solid @header-footer-bg;
+       height: 100%;
+     }
+   }
 }
