--- a/src/assets/style.less
+++ b/src/assets/style.less
@@ -11,12 +11,11 @@
 }
 
 .main-content{
-   .home-component{
-     height: 100%;
-     .container{
-       border-left: 1px solid @header-footer-bg;
-       border-right: 1px solid @header-footer-bg;
-       height: 100%;
-     }
+   >.component{ height: 100%;
+       .container{
+         border-left: 1px solid @header-footer-bg;
+         border-right: 1px solid @header-footer-bg;
+         height: 100%;
+       }
    }
 }
