--- a/src/assets/style.less
+++ b/src/assets/style.less
@@ -9,6 +9,7 @@
     display         : flex;
     justify-content : flex-start;
     align-items     : flex-start;
+    flex-wrap       : wrap;
     li {
       border       : 1px solid #ccc;
       margin-right : 2px;
